# usb-control-direct

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/rules/: README.md  c-coding-rules.md  cpp98-coding-rules.md  rust-coding-rules.md  typescript-coding-rules.md
.codex/rules/: README.md  cpp11-plus-coding-rules.md  electron-coding-rules.md  git-commit-message.md  go-coding-rules.md  python-coding-rules.md  vue3-coding-rules.md
client/: .eslintrc.cjs  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
client/deploy/: README.md  build-nsis.ps1
client/proto/: usb_control.proto
client/resources/: README.md
client/scripts/: build-e2e.cjs  gen-proto.ts
deploy/assets/: README.md
docs/: logging-convention.md
docs/architecture/: 00-prd-prototype-alignment.md  01-overview.md  01-系统架构总览.md  02-tech-stack.md  02-技术选型.md  03-modules.md  03-模块划分.md  04-frontend-pages.md  04-前端页面设计.md  05-data-flow.md  05-数据流设计.md  06-state-machine.md  06-状态机设计.md  07-permission.md  07-权限模型.md  08-database.md  08-数据库设计.md  09-api.md  09-私有协议与接口设计.md  10-automation-test-design.md  10-自动化测试设计.md  11-风险识别与应对.md  README.md  统一结果码表.md  统一错误码表.md
proto/: usb_control.proto
server/: .gitignore  Cargo.toml  rust-toolchain.toml
server/crates/app/: Cargo.toml
server/crates/app/src/: config.rs  logging.rs  main.rs
server/crates/app/tests/: config_test.rs
server/crates/auth-session/: Cargo.toml
server/crates/auth-session/src/: error.rs  lib.rs  password.rs  service.rs  session.rs
server/crates/auth-session/tests/: auth_integration.rs
server/crates/clamav-status/: Cargo.toml
server/crates/clamav-status/src/: lib.rs
server/crates/clamav-status/tests/: status_parse_test.rs
server/crates/common/: Cargo.toml  build.rs
server/crates/common/src/: audit_const.rs  code.rs  error.rs  frame.rs  lib.rs  mapping.rs  proto.rs  time.rs  types.rs
server/crates/db-migrate/: Cargo.toml
server/crates/db-migrate/src/: lib.rs  main.rs
server/crates/db-migrate/tests/: virus_db_status_test.rs
server/crates/file-access/: Cargo.toml
server/crates/file-access/src/: autorun.rs  engine.rs  error.rs  exec_detect.rs  file_tree.rs  gadget.rs  gadget_bootstrap.rs  lib.rs  nbd.rs  policy.rs  types.rs  write_back.rs
server/crates/file-access/src/exfat/: bitmap.rs  boot.rs  dir_entry.rs  fat.rs  layout.rs  mod.rs  upcase.rs  volume.rs
server/crates/file-access/tests/: autorun_test.rs  engine_mapping_contract_test.rs  engine_test.rs  exec_detect_test.rs  exfat_boot_test.rs  exfat_dir_entry_test.rs  exfat_layout_test.rs  exfat_volume_test.rs  file_tree_test.rs  gadget_bootstrap_test.rs  gadget_runtime_test.rs  nbd_protocol_test.rs  nbd_runtime_test.rs  policy_test.rs
server/crates/hid-access/: Cargo.toml
server/crates/hid-access/src/: error.rs  evdev_interceptor.rs  hid_gadget.rs  hid_report.rs  keyboard.rs  lib.rs  mouse.rs  mouse_forwarder.rs
server/crates/hid-access/tests/: evdev_interceptor_test.rs  hid_gadget_test.rs  hid_report_test.rs  keyboard_test.rs  mouse_forwarder_test.rs  mouse_test.rs
server/crates/license-upgrade/: Cargo.toml
server/crates/license-upgrade/examples/: gen_keypair.rs  gen_license.rs  verify_license.rs
server/crates/license-upgrade/src/: error.rs  lib.rs  license.rs  machine_code.rs  production_license.rs  system_upgrade.rs  virusdb_upgrade.rs
server/crates/license-upgrade/tests/: license_test.rs  machine_code_test.rs  virusdb_status_test.rs
server/crates/log-audit/: Cargo.toml
server/crates/log-audit/src/: audit.rs  error.rs  export.rs  lib.rs  query.rs
server/crates/log-audit/tests/: audit_integration.rs
server/crates/malware-scan/: Cargo.toml
server/crates/malware-scan/src/: clam_scanner.rs  error.rs  lib.rs  scan_service.rs
server/crates/malware-scan/tests/: clam_scanner_test.rs  scan_service_test.rs
server/crates/policy-import-export/: Cargo.toml
server/crates/policy-import-export/src/: crypto.rs  error.rs  format.rs  key_provider.rs  lib.rs  service.rs
server/crates/policy-import-export/tests/: policy_roundtrip_test.rs
server/crates/protocol-gateway/: Cargo.toml
server/crates/protocol-gateway/src/: codec.rs  connection.rs  context.rs  error.rs  lib.rs  middleware.rs  router.rs  tls.rs
server/crates/protocol-gateway/src/handlers/: audit_helper.rs  auth_status.rs  change_password.rs  connected_devices.rs  file_access.rs  license.rs  license_state.rs  login.rs  logout.rs  logs.rs  mod.rs  policy.rs  register.rs  system.rs  users.rs  whitelist.rs
server/crates/storage/: Cargo.toml
server/crates/storage-test-support/: Cargo.toml
server/crates/storage-test-support/src/: lib.rs
server/crates/storage/src/: error.rs  exec_type.rs  extension.rs  file_access_policy.rs  file_type_blacklist.rs  health.rs  lib.rs  log_retention_event.rs  malware_log.rs  model.rs  operation_log.rs  policy_import.rs  pool.rs  role_permission.rs  schema.rs  system_config.rs  usb_audit_log.rs  usb_whitelist.rs  users.rs
server/crates/storage/tests/: storage_integration.rs
server/crates/usb-identify/: Cargo.toml
server/crates/usb-identify/src/: descriptor.rs  error.rs  lib.rs  monitor.rs  mount.rs  orchestrator.rs  state_machine.rs  traits.rs  udev_monitor.rs
server/crates/usb-identify/tests/: descriptor_test.rs  device_manager_test.rs  orchestrator_test.rs  state_machine_test.rs  udev_monitor_test.rs
server/crates/whitelist/: Cargo.toml
server/crates/whitelist/src/: error.rs  lib.rs  service.rs
server/crates/whitelist/tests/: whitelist_integration.rs
server/deploy/: build-deb.sh  usb-control.service
server/deploy/bundle/: README.md
server/deploy/config/: usb-control.toml
server/deploy/db/: README.md
server/deploy/db/migrations/: 0001_init.sql
server/deploy/db/seeds/: 0001_default_data.sql
server/deploy/debian/: control.template  postinst  postrm  preinst  prerm
server/deploy/scripts/: 99-usb-control.rules  smoke.sh  usb-control-db-migrate.sh  usb-control-otg-init.sh
server/deploy/tls/: README.md
(+196 files in other folders)
