[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/storage",
    "crates/protocol-gateway",
    "crates/log-audit",
    "crates/auth-session",
    "crates/usb-identify",
    "crates/hid-access",
    "crates/malware-scan",
    "crates/file-access",
    "crates/whitelist",
    "crates/policy-import-export",
    "crates/license-upgrade",
    "crates/app",
    "crates/db-migrate",
    "crates/storage-test-support",
    "crates/clamav-status",
]

[workspace.package]
version = "3.0.1"
edition = "2021"
rust-version = "1.96"
license = "Proprietary"

[workspace.dependencies]
# 公共类型 & 协议
prost = "0.13"
prost-build = "0.13"
crc32fast = "1.4"
thiserror = "1.0"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 鉴权
bcrypt = "0.16"
rand = "0.8"
base64 = "0.22"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# TLS
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

# 测试辅助
tempfile = "3"

# 国密算法
smcrypto = "0.3"

# 哈希
sha2 = "0.10"

# 二维码
qrcode = "0.14"

# 图片编码
image = { version = "0.25", default-features = false, features = ["png"] }

# 压缩解压
zip = { version = "2.0", default-features = false, features = ["deflate"] }

# 时间
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# 系统调用
libc = "0.2"
nix = { version = "0.29", features = ["mount", "fs"] }
udev = "0.9"
hex = "0.4"

# 内部 crate
common = { path = "crates/common" }
storage = { path = "crates/storage" }
clamav-status = { path = "crates/clamav-status" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
