[package]
name = "usb-control-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "USB 安全管理装置端服务入口"

[[bin]]
name = "usb-control"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
auth-session = { path = "../auth-session" }
log-audit = { path = "../log-audit" }
whitelist = { path = "../whitelist" }
file-access = { path = "../file-access" }
hid-access = { path = "../hid-access" }
malware-scan = { path = "../malware-scan" }
usb-identify = { path = "../usb-identify" }
policy-import-export = { path = "../policy-import-export" }
license-upgrade = { path = "../license-upgrade" }
protocol-gateway = { path = "../protocol-gateway" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
rolling-file = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
