[package]
name = "auth-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S08 用户与会话服务（骨架）"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
bcrypt = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
log-audit = { path = "../log-audit" }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
