[package]
name = "file-access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S04 文件访问控制引擎"

[dependencies]
storage = { workspace = true }
usb-identify = { path = "../usb-identify" }
hid-access = { path = "../hid-access" }
tokio = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
tracing = "0.1"

[dev-dependencies]
storage-test-support = { path = "../storage-test-support" }
tempfile = { workspace = true }
