[package]
name = "license-upgrade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S09 授权与系统维护服务"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
smcrypto = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
