[package]
name = "log-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S07 日志审计服务"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
