[package]
name = "log-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S07 日志审计服务"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"

[dev-dependencies]
storage-test-support = { path = "../storage-test-support" }
tempfile = { workspace = true }
