[package]
name = "policy-import-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S06 策略包导入导出服务"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
whitelist = { path = "../whitelist" }
smcrypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
