[package]
name = "protocol-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S10 私有协议 API 网关"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rcgen = { workspace = true }
