[package]
name = "protocol-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S10 私有协议 API 网关"

[dependencies]
common = { workspace = true }
storage = { workspace = true }
auth-session = { path = "../auth-session" }
log-audit = { path = "../log-audit" }
whitelist = { path = "../whitelist" }
usb-identify = { path = "../usb-identify" }
policy-import-export = { path = "../policy-import-export" }
license-upgrade = { path = "../license-upgrade" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rcgen = { workspace = true }
