[package]
name = "storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S11 装置侧数据存储适配"

[dependencies]
common = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
storage-test-support = { path = "../storage-test-support" }
tempfile = { workspace = true }
